--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
  <head>
   <html lang="ru">
    <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/light.css">
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <link rel="icon" href="./images/favicon.ico">
    </head>
