--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
  <head>
-  <html lang="ru">
-   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +13,8 @@
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <link rel="icon" href="./images/favicon.ico">
-   </head>
+    <title>Сложно сосредоточиться</title>
+  </head>
    <body class="page">
     <header class="header decorated-zone">
      <nav class="header__theme-menu">
@@ -39,7 +38,7 @@
      </nav>
      <h1 class="title header__title">no focus</h1>
      <p class="header__text title-decor">
-      Что делать, когда не можешь делать ничего<br />
+      Что делать, когда не можешь делать ничего
       Или почему нам так сложно сконцентрироваться, особенно когда очень надо
      </p>
      <span class="header__rec" aria-hidden="true">rec</span>
@@ -66,7 +65,7 @@
        </article>
       </div>
      </section>
-     <section class="content__text-block block-row">
+     <section class="content__text-box">
       <h2 class="section__title">Что снижает концентрацию внимания?</h2>
       <div class="articles-content">
        <article class="article">
@@ -148,19 +147,17 @@
      <section class="gallery">
       <h2 class="article__title title-decor">А можно в картинках?</h2>
       <div class="pictures-grid">
-       <img src="./images/sunset.png" alt="Закат" class="picture picture-horizontal" />
-       <img src="./images/ice-cream.png" alt="Мороженое" class="picture picture-vertical" />
-       <img src="./images/tape.png" alt="Кассета" class="picture picture-vertical" />
-       <img src="./images/books.png" alt="Книги" class="picture picture-square" />
-       <img src="./images/street.png" alt="Улица" class="picture picture-horizontal" />
+       <img src="./images/sunset.png" alt="Закат" class="picture picture-horizontal">
+       <img src="./images/ice-cream.png" alt="Мороженое" class="picture picture-vertical">
+       <img src="./images/tape.png" alt="Кассета" class="picture picture-vertical">
+       <img src="./images/books.png" alt="Книги" class="picture picture-square">
+       <img src="./images/street.png" alt="Улица" class="picture picture-horizontal">
       </div>
      </section>
     </main>
-    <footer class="footer decorated-zone">
+    <footer class="footer-decorated-zone">
      <h2 class="title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
    </body>
   </html>
- </head>
-</html>
