--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <link rel="stylesheet" href="./styles/light.css">
   <link rel="icon" href="./images/favicon.ico" sizes="any">
   <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/mobile-icon.png">
 </head>
 
 <body class="page theme_dark">
   <header class="header decorated-zone content-section">
     <div class="header_item"></div>
-    <nav class="header__theme-menu">/
+    <nav class="header__theme-menu">
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_type_light">
@@ -147,7 +148,7 @@
               </h3>
             </li>
             <li class="content_list-item">
-              <h4 class="text_content title_decor li_title_decor">
+              <h4 class="text_content title_decor content__subheading">
                 Представьте небо и облака
               </h4>
               <p class="text_content">
@@ -162,7 +163,7 @@
               </p>
             </li>
             <li class="content_list-item">
-              <h4 class="text_content title_decor li_title_decor">
+              <h4 class="text_content title_decor content__subheading">
                 Включите музыку
               </h4>
               <p class="text_content">
@@ -173,7 +174,7 @@
               </p>
             </li>
             <li class="content_list-item">
-              <h4 class="text_content title_decor li_title_decor">
+              <h4 class="text_content title_decor content__subheading">
                 Прогуляйтесь
               </h4>
               <p class="text_content">
@@ -191,7 +192,7 @@
               </p>
             </li>
             <li class="content_list-item">
-              <h4 class="text_content title_decor li_title_decor">
+              <h4 class="text_content title_decor content__subheading">
                 Хорошо ешьте
               </h4>
               <p class="text_content">
@@ -203,7 +204,7 @@
               </p>
             </li>
             <li class="content_list-item">
-              <h4 class="text_content title_decor li_title_decor">Читайте</h4>
+              <h4 class="text_content title_decor content__subheading">Читайте</h4>
               <p class="text_content">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -247,7 +248,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h2 class="header_title">focus</h2>
+      <h2 class="footer_title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
