--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,6 @@
   <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./images/mobile-icon.png">
 </head>
-
 <body class="page theme_dark">
   <header class="header decorated-zone content-section">
     <div class="header_item"></div>
@@ -50,7 +48,7 @@
       </p>
     </header>
     <main>
-      <section class="content-section content-section-decorated">
+      <section class="section-why">
         <h2 class="text_content section_title">
           Почему сосредоточиться так сложно
         </h2>
@@ -91,7 +89,7 @@
           </ul>
         </article>
       </section>
-      <section class="content-section content-section-decorated">
+      <section class="section-causes">
         <h2 class="text_content section_title section_title-decoration">
           Что снижает концентрацию внимания?
         </h2>
@@ -135,17 +133,17 @@
           </ul>
         </article>
       </section>
-      <section class="content-section content-section-decorated">
+      <section class="section-advices">
         <h2 class="text_content section_title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <article>
+          <h3 class="text_content title_decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <ul class="content_list">
             <li class="content_list-item">
-              <h3 class="text_content title_decor">
-                5 простых (на самом деле не очень) советов
-              </h3>
             </li>
             <li class="content_list-item">
               <h4 class="text_content title_decor content__subheading">
@@ -215,7 +213,7 @@
           </ul>
         </article>
       </section>
-      <section class="content-section content-section-decorated">
+      <section class="section-subtitle">
         <h2 class="text_content title_decor">А можно в картинках?</h2>
         <div class="article_content">
           <picture class="picture">
