--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </p>
     </header>
     <main>
-      <section class="section-why">
+      <section class="section-advices">
         <h2 class="text_content section_title">
           Почему сосредоточиться так сложно
         </h2>
