--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </header>
   <main class="main">
-    <section class="section">
+    <section class="section-advices">
       <h2 class="section__title">Почему сосредоточиться так сложно</h2>
       <div class="section__article-list">
         <article class="section__article-item">
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section-advices">
       <h2 class="section__title">Что снижает концентрацию внимания?</h2>
       <div class="section__article-list">
         <article class="section__article-item">
