--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="header__title-container">
       <h1 class="header__title">no focus</h1>
       <p class="header__subtitle title-decor">
-        Что делать, когда не можешь делать ничего<br />
+        Что делать, когда не можешь делать ничего<br/>
         Или почему нам так сложно сконцентрироваться, особенно когда очень
         надо
       </p>
@@ -86,8 +86,8 @@
       </div>
     </section>
 
-    <section class="section-advices">
-      <h2 class="section__title">Что снижает концентрацию внимания?</h2>
+    <section class=".section-why">
+      <h2 class="section__title_list">Что снижает концентрацию внимания?</h2>
       <div class="section__article-list">
         <article class="section__article-item">
           <h3 class="section__article-title title-decor">Многозадачность</h3>
@@ -126,19 +126,19 @@
       </div>
     </section>
 
-    <section class="section-advices">
+    <section class="section-causes">
       <h2 class="section__title">
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
         секунд)
       </h2>
       <div class="section__article-list">
-        <h2 class="section__article-list-title title-decor">
+        <h3 class="section__article-list-title title-decor">
           5 простых (на самом деле не очень) советов
-        </h2>
+        </h3>
         <article class="section__article-item">
-          <h3 class="section__article-title section__article-title_regular title-decor">
+          <h4 class="section__article-title section__article-title_regular title-decor">
             Представьте небо и облака
-          </h3>
+          </h4>
           <p class="section__article-text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -200,10 +200,11 @@
         </article>
       </div>
     </section>
-    <section class="section-advices">
+    <section class="section-pictures">
       <h2 class="section__title dark-title title-decor">
         А можно в картинках?
       </h2>
+      <picture class="picture">
       <img class="content_picture" src="./images/sunset.png" alt="Закат на фоне гор">
       </picture>
       <picture class="picture">
@@ -216,9 +217,8 @@
         <img class="content_picture" src="./images/books.png" alt="Стопка книг">
       </picture>
       <picture class="picture">
-        <img class="content_picture" src="./images/street.png" alt="Улица" />
+        <img class="content_picture" src="./images/street.png" alt="Улица">
       </picture>
-      </div>
     </section>
   </main>
   <footer class="footer decorated-zone">
