--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="header__title-container">
       <h1 class="header__title">no focus</h1>
       <p class="header__subtitle title-decor">
-        Что делать, когда не можешь делать ничего<br/>
+        Что делать, когда не можешь делать ничего<br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень
         надо
       </p>
@@ -86,8 +86,8 @@
       </div>
     </section>
 
-    <section class=".section-why">
-      <h2 class="section__title_list">Что снижает концентрацию внимания?</h2>
+    <section class="section-why">
+      <h2 class="section__title">Что снижает концентрацию внимания?</h2>
       <div class="section__article-list">
         <article class="section__article-item">
           <h3 class="section__article-title title-decor">Многозадачность</h3>
@@ -205,7 +205,7 @@
         А можно в картинках?
       </h2>
       <picture class="picture">
-      <img class="content_picture" src="./images/sunset.png" alt="Закат на фоне гор">
+        <img class="content_picture" src="./images/sunset.png" alt="Закат на фоне гор">
       </picture>
       <picture class="picture">
         <img class="content_picture" src="./images/ice-cream.png" alt="Мороженое с ягодами и фруктами">
